# .dotfiles

./: .gitignore  .pre-commit-config-OLD.yaml  .pre-commit-config.yaml  404.html  Cargo.toml  LICENSE  LICENSE.md  README.md  ci.py  default.nix  dependencies.txt  devenv.nix  devenv.yaml  feed.xml  hogger.html  index.html  pyproject.toml  requirements.txt  robots.txt  rustfmt.toml  sitemap.xml  thrixel.html  tmp.nix
.github/workflows/: bootstrap-test.yml  build-jekyll.yml  devenv-ci.yml  submission-tests.yml  website.yml
arcade/: index.html
argparse/: Cargo.toml  devenv.nix
argparse/src/: argument.rs  parser.rs
assets/img/: tunic-manual-p20.avif
bg_stats/: .gitignore  BGStatsExport-for-test.json  api.py  api_test.py  bg_stats_grafana_dashboard.json  database_util.py  devenv.nix  main.py  pyproject.toml
bootstrap/: actions.py  actions_test.py  bootstrap.py  bootstrap.sh  bootstrap_integration_test.py  bootstrap_test.py  builder.py  builder_test.py  ci.py  devenv.nix  main.py  main_integration_test.py  main_test.py  predicates_test.py  pyproject.toml  units.py  units_test.py
builder/: actions.py  actions_test.py  bootstrap.py  bootstrap_integration_test.py  bootstrap_test.py  predicates.py  predicates_test.py  units.py  units_test.py
by-year/: index.html
cards/: Cargo.toml
cards/src/: deck.rs  lib.rs  pile.rs  standard_playing_card.rs
categories/: index.html
config/: home.nix  init.vim
docs/: .gitignore  CNAME  Gemfile  _config.yml  index.md  package-lock.json  package.json
docs-old/: .gitignore  LICENSE  README.md  blog.html  index.html  npm-shrinkwrap.json  package.json
docs-old/css/: freelancer.css  freelancer.min.css
docs-old/js/: freelancer.js
docs-old/src/: Logo.tsx  MenuToggle.tsx
docs/_data/: navigation.yml
docs/_pages/: 404.md  about.md  arcade.md  by-year.md  home.md
docs/_portfolio/: 01-hkn.md  03-ipe-robot-programming.md  04-amazon-internship.md  05-eecs373-smart-shower.md  06-student-instructor.md  07-eecs470-computer-architecture.md  08-qualcomm-internship.md  09-eecs573-hardware-prefetcher.md  10-eecs498-cs-education.md  11-ocient-internship.md  86-qumulo.md  87-ada-volunteering.md  88-ocient-internship.md  89-eecs498-cs-education.md  95-amazon-internship.md  97-startup-high-school.md  98-hkn.md  99-university-of-michigan.md  amazon-internship.md  eecs373-smart-shower.md  eecs470-computer-architecture.md  eecs498-cs-education.md  eecs573-hardware-prefetcher.md  hkn.md  ipe-robot-programming.md  ocient-internship.md  qualcomm-internship.md  startup-high-school.md  student-instructor.md  university-of-michigan.md
docs/_posts/: 2018-07-01-the-importance-of-diving-into-game-development.md  2018-07-06-easy-to-use-tools-for-larger-codebases.md  2018-07-15-sailing-the-belizean-coastline.md  2018-07-29-how-nintendo-continues-to-innovate.md  2022-06-03-test.md  2022-06-03-welcome-to-jekyll.markdown  2022-06-14-the-forgotten-city.md  2022-06-20-spiritfarer.md  2022-07-13-git-basics.md  2022-07-18-quarantine-quick-reviews.md  2022-08-01-bg-stats.md  2022-09-13-hearthstone-battlegrounds-s2.md  2022-09-22-air-land-sea.md  2022-11-20-automating-deployments.md  2023-01-01-my-top-single-player-games.md  2023-03-08-neon-white-level-walkthrough.md  2023-03-08-neon-white.md  2023-04-06-jekyll-pages.md  2023-05-03-api-design.md  2023-05-07-comparing-deaths-door-and-tunic.md  2023-08-30-facade-pattern.md
docs/src/: App.test.tsx  App.tsx  MenuItem.tsx  MenuLinks.tsx  MenuToggle.tsx  NavBar.tsx
examples/: path_finding.rs
examples/cards/: main.rs
examples/gaia-project/: asset_library.rs  main.rs  power.rs  types.rs  view.rs
examples/path-finding/: main.rs  (+2 more)
gaia_project/: Cargo.toml
games/dcg_card_generator/: Cargo.toml
games/dcg_card_generator/src/: main.rs
games/dcg_render/: Cargo.toml
games/dcg_render/src/: error.rs  lib.rs
games/dcg_render/src/card/: act_card.rs  agenda_card.rs  character_card.rs  encounter_card.rs  enemy_card.rs  error.rs  location_card.rs  mod.rs  player_card.rs  text.rs  types.rs
games/dcg_render/src/card/components/: cost.rs  description.rs  mod.rs  title.rs
games/factory/: README.md  common.py  game_state.py  game_systems.py  game_types.py  main.py  pyproject.toml
games/factory/units/: coal.py  converters.py  coverage.py  fossil_gas.py  headquarters.py  oil.py  science.py  simple.py  steam.py  wood.py
games/pocket_ops/: Cargo.toml
games/pocket_ops/src/: main.rs
git/: aliases.zsh  gitconfig  gitconfig.local.symlink  gitconfig.symlink  gitexcludes  gitmessage.txt.symlink
hg/: aliases.zsh  hgrc.symlink
home-manager/: home.nix
imagery/: text_to_image.py
input/: Cargo.toml
java/: env.zsh
link_locator/: main.py  pyproject.toml  stations.yaml
math/: Cargo.toml
nix/: start-daemon.zsh
notes/: 2021-08-06.md  2021-08-09.md  2021-08-13.md  2021-08-16.md  2021-08-24.md  2021-08-27.md  2021-09-02.md  2021-09-21.md  2021-09-22.md  2021-10-04.md  2021-11-09.md  2021-11-17.md  2022-01-04.md  2022-01-10.md  2022-02-03.md  2022-02-04.md  2022-02-07.md  heimdal-readme.md
nvim/: config.zsh  init.vim
oath/: Cargo.toml  README.md
oath/src/engine/: dice.rs  types.rs
path_finding/: Cargo.toml
path_finding/src/: integration_test.py  main.rs  maze.rs  solver.rs
path_finding/src/test_input/: sample-map-solution.ron  second-easiest-possible-solution.ron
portfolio/: index.html
practice/: README.md  recipe_finder.py
qumulo/: aliases.zsh  exports.zsh
script/: bootstrap
scripts/: bootstrap
src/: fraction.rs  lib.rs  math.rs
stat_gen/: Cargo.toml
system/: profile.symlink  zprofile.symlink
tags/: index.html
tmux/: aliases.zsh  tmux.conf.symlink
tools/: blog-post-template.md  create_new_blog_post.py  create_new_blog_post_test.py  pyproject.toml  rename.py  rename_test.py  resume_image_collater.py  update-last-modified-at.sh
util/: temporary_filesystem.py  temporary_filesystem_test.py
vim/: .ycm_extra_conf.py  config.zsh  vimrc.symlink
zsh/: aliases.zsh  config.zsh  functions.zsh  history.zsh  key_bindings.zsh  p10k.zsh.symlink  theme.zsh  zprofile.symlink  zshrc.symlink
(+384 files in other folders)
