[package]
name = "dotfiles"
version = "0.1.0"
authors = ["Carson Boden <carson.boden@gmail.com>"]
edition = "2021"

[workspace]
members = [
  ".",
  "argparse/",
  "cards/",
  "gaia_project/",
  "input/",
  "path_finding/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_matches = "1.5"
