[workspace]
resolver = "2"
members = [
  ".",
  "argparse/",
  "cards/",
  "games/dcg_card_generator/",
  "games/dcg_render/",
  "games/gaia_project/",
  "games/oath/",
  "games/sudoku/",
  "input/",
  "math/",
  "path_finding/",
  "stat_gen/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
