[tool.poetry]
name = "dotfiles"
version = "0.1.0"
authors = [ "Carson Boden <carson.boden@gmail.com>" ]
description = "A collection of my dotfiles"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
dacite = "^1.6.0"
distro = "^1.4.0"
fs = "^2.4.15"
GitPython = "^3.1.20"
google-api-python-client = "^2.51.0"
google-auth-oauthlib = "^0.5.2"
gsheets = "^0.6.1"
parameterized = "^0.8.1"
pydrive = "^1.3.1"
PyPDF2 = "^2.3.1"
reportlab = "^3.6.10"
matplotlib = "^3.5.2"
mysqlclient = "^2.1.1"
mysql-connector-python = "^8.0.30"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
mypy = "^0.910"
types-PyYAML = "^6.0.8"
types-requests = "^2.27.31"
types-setuptools = "^57.0.2"

[tool.pycln]
all = true
