[tool.poetry]
name = "dotfiles"
version = "0.1.0"
authors = [ "Carson Boden <carson.boden@gmail.com>" ]
description = "A collection of my dotfiles"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
mypy = "^0.910"
types-setuptools = "^57.0.2"

[tool.pycln]
all = true
