[tool.poetry]
name = "bg_stats"
version = "0.1.0"
authors = [ "Carson Boden <carson.boden@gmail.com>" ]
description = "Bindings for Erko's BGStats App"

[tool.poetry.dependencies]
python = "^3.8"
dacite = "^1.6.0"
matplotlib = "^3.5.2"
mysqlclient = "^2.1.1"
mysql-connector-python = "^8.0.31"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
mypy = "^0.910"
types-requests = "^2.27.31"
