[tool.poetry]
name = "bootstrap"
version = "0.1.0"
authors = [ "Carson Boden <carson.boden@gmail.com>" ]
description = "Library to install and set up other development dependencies"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
distro = "^1.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
mypy = "^0.910"
types-PyYAML = "^6.0.8"
types-setuptools = "^57.0.2"

[tool.pycln]
all = true
