[tool.poetry]
name = "tools"
version = "0.1.0"
authors = [ "Carson Boden <carson.boden@gmail.com>" ]
description = "Various tools created for personal use"

[tool.poetry.dependencies]
python = "^3.8"
fs = "^2.4.15"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
mypy = "^0.910"
types-setuptools = "^57.0.2"

[tool.pycln]
all = true
