[package]
name = "pocket_ops"
version = "0.1.0"
authors = ["Carson Boden <carson.boden@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
strum = "0.13.0"
strum_macros = "0.13.0"

input = { path = "../../input" }
